// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontIcon should render all icons 1`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f101";
}

<span
  class="emotion-0 emotion-1"
  name="icon_album"
/>
`;

exports[`FontIcon should render all icons 2`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f102";
}

<span
  class="emotion-0 emotion-1"
  name="icon_arrow-up"
/>
`;

exports[`FontIcon should render all icons 3`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f103";
}

<span
  class="emotion-0 emotion-1"
  name="icon_attachment"
/>
`;

exports[`FontIcon should render all icons 4`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f104";
}

<span
  class="emotion-0 emotion-1"
  name="icon_calendar"
/>
`;

exports[`FontIcon should render all icons 5`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f105";
}

<span
  class="emotion-0 emotion-1"
  name="icon_checkbox-bold"
/>
`;

exports[`FontIcon should render all icons 6`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f106";
}

<span
  class="emotion-0 emotion-1"
  name="icon_checkbox-empty"
/>
`;

exports[`FontIcon should render all icons 7`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f107";
}

<span
  class="emotion-0 emotion-1"
  name="icon_checkbox"
/>
`;

exports[`FontIcon should render all icons 8`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f108";
}

<span
  class="emotion-0 emotion-1"
  name="icon_checked-bold"
/>
`;

exports[`FontIcon should render all icons 9`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f109";
}

<span
  class="emotion-0 emotion-1"
  name="icon_checked"
/>
`;

exports[`FontIcon should render all icons 10`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f10a";
}

<span
  class="emotion-0 emotion-1"
  name="icon_clock"
/>
`;

exports[`FontIcon should render all icons 11`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f10b";
}

<span
  class="emotion-0 emotion-1"
  name="icon_close-circle"
/>
`;

exports[`FontIcon should render all icons 12`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f10c";
}

<span
  class="emotion-0 emotion-1"
  name="icon_close"
/>
`;

exports[`FontIcon should render all icons 13`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f10d";
}

<span
  class="emotion-0 emotion-1"
  name="icon_contacts"
/>
`;

exports[`FontIcon should render all icons 14`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f10e";
}

<span
  class="emotion-0 emotion-1"
  name="icon_cut"
/>
`;

exports[`FontIcon should render all icons 15`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f10f";
}

<span
  class="emotion-0 emotion-1"
  name="icon_dashboard"
/>
`;

exports[`FontIcon should render all icons 16`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f110";
}

<span
  class="emotion-0 emotion-1"
  name="icon_down-circle"
/>
`;

exports[`FontIcon should render all icons 17`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f111";
}

<span
  class="emotion-0 emotion-1"
  name="icon_down-small"
/>
`;

exports[`FontIcon should render all icons 18`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f112";
}

<span
  class="emotion-0 emotion-1"
  name="icon_down"
/>
`;

exports[`FontIcon should render all icons 19`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f113";
}

<span
  class="emotion-0 emotion-1"
  name="icon_download-thin"
/>
`;

exports[`FontIcon should render all icons 20`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f114";
}

<span
  class="emotion-0 emotion-1"
  name="icon_download"
/>
`;

exports[`FontIcon should render all icons 21`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f115";
}

<span
  class="emotion-0 emotion-1"
  name="icon_edit"
/>
`;

exports[`FontIcon should render all icons 22`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f116";
}

<span
  class="emotion-0 emotion-1"
  name="icon_ellipsis-outline"
/>
`;

exports[`FontIcon should render all icons 23`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f117";
}

<span
  class="emotion-0 emotion-1"
  name="icon_ellipsis"
/>
`;

exports[`FontIcon should render all icons 24`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f118";
}

<span
  class="emotion-0 emotion-1"
  name="icon_embed"
/>
`;

exports[`FontIcon should render all icons 25`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f119";
}

<span
  class="emotion-0 emotion-1"
  name="icon_facebook"
/>
`;

exports[`FontIcon should render all icons 26`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f11a";
}

<span
  class="emotion-0 emotion-1"
  name="icon_failed"
/>
`;

exports[`FontIcon should render all icons 27`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f11b";
}

<span
  class="emotion-0 emotion-1"
  name="icon_favorite"
/>
`;

exports[`FontIcon should render all icons 28`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f11c";
}

<span
  class="emotion-0 emotion-1"
  name="icon_file-doc"
/>
`;

exports[`FontIcon should render all icons 29`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f11d";
}

<span
  class="emotion-0 emotion-1"
  name="icon_file-pdf"
/>
`;

exports[`FontIcon should render all icons 30`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f11e";
}

<span
  class="emotion-0 emotion-1"
  name="icon_file-zip"
/>
`;

exports[`FontIcon should render all icons 31`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f11f";
}

<span
  class="emotion-0 emotion-1"
  name="icon_file"
/>
`;

exports[`FontIcon should render all icons 32`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f120";
}

<span
  class="emotion-0 emotion-1"
  name="icon_global"
/>
`;

exports[`FontIcon should render all icons 33`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f121";
}

<span
  class="emotion-0 emotion-1"
  name="icon_image"
/>
`;

exports[`FontIcon should render all icons 34`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f122";
}

<span
  class="emotion-0 emotion-1"
  name="icon_info"
/>
`;

exports[`FontIcon should render all icons 35`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f123";
}

<span
  class="emotion-0 emotion-1"
  name="icon_left-circle"
/>
`;

exports[`FontIcon should render all icons 36`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f124";
}

<span
  class="emotion-0 emotion-1"
  name="icon_left-small"
/>
`;

exports[`FontIcon should render all icons 37`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f125";
}

<span
  class="emotion-0 emotion-1"
  name="icon_left"
/>
`;

exports[`FontIcon should render all icons 38`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f126";
}

<span
  class="emotion-0 emotion-1"
  name="icon_letter"
/>
`;

exports[`FontIcon should render all icons 39`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f127";
}

<span
  class="emotion-0 emotion-1"
  name="icon_linkedin-outline"
/>
`;

exports[`FontIcon should render all icons 40`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f128";
}

<span
  class="emotion-0 emotion-1"
  name="icon_linkedin"
/>
`;

exports[`FontIcon should render all icons 41`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f129";
}

<span
  class="emotion-0 emotion-1"
  name="icon_list-view"
/>
`;

exports[`FontIcon should render all icons 42`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f12a";
}

<span
  class="emotion-0 emotion-1"
  name="icon_lock"
/>
`;

exports[`FontIcon should render all icons 43`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f12b";
}

<span
  class="emotion-0 emotion-1"
  name="icon_magazine-view"
/>
`;

exports[`FontIcon should render all icons 44`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f12c";
}

<span
  class="emotion-0 emotion-1"
  name="icon_minus-circle"
/>
`;

exports[`FontIcon should render all icons 45`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f12d";
}

<span
  class="emotion-0 emotion-1"
  name="icon_mobile"
/>
`;

exports[`FontIcon should render all icons 46`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f12e";
}

<span
  class="emotion-0 emotion-1"
  name="icon_music"
/>
`;

exports[`FontIcon should render all icons 47`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f12f";
}

<span
  class="emotion-0 emotion-1"
  name="icon_paste"
/>
`;

exports[`FontIcon should render all icons 48`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f130";
}

<span
  class="emotion-0 emotion-1"
  name="icon_picture"
/>
`;

exports[`FontIcon should render all icons 49`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f131";
}

<span
  class="emotion-0 emotion-1"
  name="icon_play"
/>
`;

exports[`FontIcon should render all icons 50`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f132";
}

<span
  class="emotion-0 emotion-1"
  name="icon_plus-circle"
/>
`;

exports[`FontIcon should render all icons 51`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f133";
}

<span
  class="emotion-0 emotion-1"
  name="icon_popout"
/>
`;

exports[`FontIcon should render all icons 52`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f134";
}

<span
  class="emotion-0 emotion-1"
  name="icon_questionmark-full"
/>
`;

exports[`FontIcon should render all icons 53`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f135";
}

<span
  class="emotion-0 emotion-1"
  name="icon_questionmark"
/>
`;

exports[`FontIcon should render all icons 54`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f136";
}

<span
  class="emotion-0 emotion-1"
  name="icon_restore"
/>
`;

exports[`FontIcon should render all icons 55`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f137";
}

<span
  class="emotion-0 emotion-1"
  name="icon_right-circle"
/>
`;

exports[`FontIcon should render all icons 56`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f138";
}

<span
  class="emotion-0 emotion-1"
  name="icon_right-small"
/>
`;

exports[`FontIcon should render all icons 57`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f139";
}

<span
  class="emotion-0 emotion-1"
  name="icon_right"
/>
`;

exports[`FontIcon should render all icons 58`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f13a";
}

<span
  class="emotion-0 emotion-1"
  name="icon_saleitem"
/>
`;

exports[`FontIcon should render all icons 59`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f13b";
}

<span
  class="emotion-0 emotion-1"
  name="icon_search"
/>
`;

exports[`FontIcon should render all icons 60`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f13c";
}

<span
  class="emotion-0 emotion-1"
  name="icon_settings"
/>
`;

exports[`FontIcon should render all icons 61`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f13d";
}

<span
  class="emotion-0 emotion-1"
  name="icon_share"
/>
`;

exports[`FontIcon should render all icons 62`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f13e";
}

<span
  class="emotion-0 emotion-1"
  name="icon_shopping-cart"
/>
`;

exports[`FontIcon should render all icons 63`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f13f";
}

<span
  class="emotion-0 emotion-1"
  name="icon_sound"
/>
`;

exports[`FontIcon should render all icons 64`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f140";
}

<span
  class="emotion-0 emotion-1"
  name="icon_star-filled-add"
/>
`;

exports[`FontIcon should render all icons 65`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f141";
}

<span
  class="emotion-0 emotion-1"
  name="icon_star-outline-add"
/>
`;

exports[`FontIcon should render all icons 66`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f142";
}

<span
  class="emotion-0 emotion-1"
  name="icon_star"
/>
`;

exports[`FontIcon should render all icons 67`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f143";
}

<span
  class="emotion-0 emotion-1"
  name="icon_stopwatch"
/>
`;

exports[`FontIcon should render all icons 68`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f144";
}

<span
  class="emotion-0 emotion-1"
  name="icon_story"
/>
`;

exports[`FontIcon should render all icons 69`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f145";
}

<span
  class="emotion-0 emotion-1"
  name="icon_tile-view"
/>
`;

exports[`FontIcon should render all icons 70`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f146";
}

<span
  class="emotion-0 emotion-1"
  name="icon_trash"
/>
`;

exports[`FontIcon should render all icons 71`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f147";
}

<span
  class="emotion-0 emotion-1"
  name="icon_twitter_full"
/>
`;

exports[`FontIcon should render all icons 72`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f148";
}

<span
  class="emotion-0 emotion-1"
  name="icon_twitter-outline"
/>
`;

exports[`FontIcon should render all icons 73`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f149";
}

<span
  class="emotion-0 emotion-1"
  name="icon_twitter"
/>
`;

exports[`FontIcon should render all icons 74`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f14a";
}

<span
  class="emotion-0 emotion-1"
  name="icon_up-circle"
/>
`;

exports[`FontIcon should render all icons 75`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f14b";
}

<span
  class="emotion-0 emotion-1"
  name="icon_up-small"
/>
`;

exports[`FontIcon should render all icons 76`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f14c";
}

<span
  class="emotion-0 emotion-1"
  name="icon_up"
/>
`;

exports[`FontIcon should render all icons 77`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f14d";
}

<span
  class="emotion-0 emotion-1"
  name="icon_user"
/>
`;

exports[`FontIcon should render all icons 78`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f14e";
}

<span
  class="emotion-0 emotion-1"
  name="icon_users"
/>
`;

exports[`FontIcon should render all icons 79`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f14f";
}

<span
  class="emotion-0 emotion-1"
  name="icon_video"
/>
`;

exports[`FontIcon should render all icons 80`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f150";
}

<span
  class="emotion-0 emotion-1"
  name="icon_zoom-lightbox"
/>
`;

exports[`FontIcon should render all icons 81`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0:before {
  content: "\\f151";
}

<span
  class="emotion-0 emotion-1"
  name="icon_zoom"
/>
`;

exports[`FontIcon should render flipped 1`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-transform: scaleX(-1);
  -moz-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
}

.emotion-0:before {
  content: "\\f101";
}

<span
  class="emotion-0 emotion-1"
  name="icon_album"
/>
`;

exports[`FontIcon should render with fixed width 1`] = `
.emotion-0 {
  font-family: 'icons'!important;
  display: inline-block;
  speak: none;
  font-size: inherit;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  width: 1.65em;
  text-align: center;
}

.emotion-0:before {
  content: "\\f101";
}

<span
  class="emotion-0 emotion-1"
  name="icon_album"
/>
`;
